Update LockedChessCentre.java